# phyloRNN

./: .gitignore  README.md  ali_autoencoder.py  ali_autoencoder_ws.py  dev_log  dev_roadmap_logs  devbox.json  pyproject.toml  requirements.txt  run_predictions_revb.py  sequencoder.py  setup.py  simulate_data.py  simulation_embedding.py  train_model.py  train_model_revb.py
dev/: Explore_simulation_sqlite.ipynb  batch_training.py  dev_roadmap_logs  memory_profile.py  normal_training.py  sqlite_batching.ipynb
dev/.ipynb_checkpoints/: Explore_simulation_sqlite-checkpoint.ipynb
notebooks/: Explore_simulation_sqlite.ipynb  Monitor.ipynb
phyloRNN/: __init__.py  compare_time_series.py  concatenate_nns.py  parse_data.py  plots.py  predict.py  rate_estimator.py  rnn_builder.py  sequence_simulator.py  sim_utilities.py  simulate.py  utilities.py
scripts/: benchmark_gpu.py  run_predictions_revb.py  simulate_data.py  simulate_data_multiple.py  simulate_data_multiple_simulation.py  simulate_train_data_revb.py  train_model.py  train_model_batch.py  train_model_batch_multiple.py
tests/: test_parse_data.py  test_simulation.py
utils/: __init__.py  parse_data.py
